# beta-vulkan-engine

./: .gitgnore  .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_shaders.bat
assets/shaders/: point_light_fragment.frag  point_light_fragment.spv  point_light_shader.spv  point_light_shader.vert  shadow_shader.spv  shadow_shader.vert  simple_fragment.frag  simple_fragment.spv  simple_shader.spv  simple_shader.vert
src/: main.cpp
src/core/: application.cpp  application.h
src/platform/: xe_movement_controller.cpp  xe_movement_controller.h  xe_window.cpp  xe_window.h
src/renderer/: xe_buffer.cpp  xe_buffer.h  xe_buffer_vma.cpp  xe_buffer_vma.h  xe_descriptors.cpp  xe_descriptors.h  xe_device.cpp  xe_device.h  xe_image_vma.cpp  xe_image_vma.h  xe_model.cpp  xe_model.h  xe_pipeline.cpp  xe_pipeline.h  xe_renderer.cpp  xe_renderer.h  xe_swap_chain.cpp  xe_swap_chain.h  xe_texture.cpp  xe_texture.h
src/renderer/gfx_resource_managers/: xe_material_manager.cpp  xe_material_manager.h  xe_texture_manager.cpp  xe_texture_manager.h
src/renderer/lighting/: xe_light_manager.cpp  xe_light_manager.h  xe_lights.h
src/renderer/materials/: xe_materials.h
src/scene/: xe_game_object.cpp  xe_game_object.h  xe_scene_importer.cpp  xe_scene_importer.h
src/systems/: xe_camera.cpp  xe_camera.h  xe_frame_info.h  xe_point_light_system.cpp  xe_point_light_system.h  xe_shadow_system.cpp  xe_shadow_system.h  xe_simple_render_system.cpp  xe_simple_render_system.h  xe_skybox_system.cpp  xe_skybox_system.h
src/utils/: xe_utils.h
